WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213110
REGRESSION (
r262124
): Twitter videos go blank after exiting fullscreen
https://bugs.webkit.org/show_bug.cgi?id=213110
Summary
REGRESSION (r262124): Twitter videos go blank after exiting fullscreen
Simon Fraser (smfr)
Reported
2020-06-11 20:29:13 PDT
Summary: Twitter videos go blank after exiting fullscreen Steps To Reproduce: 1. Load
https://twitter.com/stephentyrone/status/1271230268762992642
in Safari 2. Take the video fullscreen 3. Exit fullscreen Results: The area where the video should be is blank. Regression: I regressed this to
https://trac.webkit.org/changeset/262124/webkit
Attachments
Patch
(6.69 KB, patch)
2020-06-18 13:26 PDT
,
Sergio Villar Senin
no flags
Details
Formatted Diff
Diff
Patch
(6.83 KB, patch)
2020-06-22 05:24 PDT
,
Sergio Villar Senin
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2020-06-12 00:53:28 PDT
We'll check. It's weird because I cannot reproduce it with WebKitGTK
Peng Liu
Comment 2
2020-06-12 16:25:22 PDT
Is FULLSCREEN_API enabled for WebKitGTK? Looks like it is not. Then this issue affects Mac version only.
Peng Liu
Comment 3
2020-06-12 16:26:55 PDT
<
rdar://problem/64282632
>
Simon Fraser (smfr)
Comment 4
2020-06-12 17:54:29 PDT
Can we revert the change for now?
Sergio Villar Senin
Comment 5
2020-06-14 22:57:53 PDT
(In reply to Simon Fraser (smfr) from
comment #4
)
> Can we revert the change for now?
Reverted for now while investigating.
Sergio Villar Senin
Comment 6
2020-06-15 02:22:41 PDT
(In reply to Peng Liu from
comment #2
)
> Is FULLSCREEN_API enabled for WebKitGTK? Looks like it is not. Then this > issue affects Mac version only.
Not by default, but it's implemented. After building with it enabled I cannot reproduce the test case in WebKitGtk either. I'm wondering whether there is some special code in twitter depending on the UA that could cause the issue. Still checking
Sergio Villar Senin
Comment 7
2020-06-15 03:34:57 PDT
(In reply to Sergio Villar Senin from
comment #6
)
> (In reply to Peng Liu from
comment #2
) > > Is FULLSCREEN_API enabled for WebKitGTK? Looks like it is not. Then this > > issue affects Mac version only. > > Not by default, but it's implemented. After building with it enabled I > cannot reproduce the test case in WebKitGtk either. I'm wondering whether > there is some special code in twitter depending on the UA that could cause > the issue. Still checking
BTW the issue if any will be with the interaction between RenderFlexibleBox and RenderFullscreen (derived) more than with the FULLSCREEN_API which is different stuff.
Sergio Villar Senin
Comment 8
2020-06-15 06:07:49 PDT
(In reply to Sergio Villar Senin from
comment #7
)
> (In reply to Sergio Villar Senin from
comment #6
) > > (In reply to Peng Liu from
comment #2
) > > > Is FULLSCREEN_API enabled for WebKitGTK? Looks like it is not. Then this > > > issue affects Mac version only. > > > > Not by default, but it's implemented. After building with it enabled I > > cannot reproduce the test case in WebKitGtk either. I'm wondering whether > > there is some special code in twitter depending on the UA that could cause > > the issue. Still checking > > BTW the issue if any will be with the interaction between RenderFlexibleBox > and RenderFullscreen (derived) more than with the FULLSCREEN_API which is > different stuff.
Good news is that I managed to repro it using WebKitGtk so it'll be much easier to get a fix.
Simon Fraser (smfr)
Comment 9
2020-06-15 08:28:28 PDT
Was reverted in
https://trac.webkit.org/changeset/263018/webkit
Sergio Villar Senin
Comment 10
2020-06-18 13:26:10 PDT
Created
attachment 402230
[details]
Patch
Sergio Villar Senin
Comment 11
2020-06-22 05:24:53 PDT
Created
attachment 402464
[details]
Patch Test working now in Mac/iOS
Sergio Villar Senin
Comment 12
2020-06-23 00:27:36 PDT
Committed
r263389
: <
https://trac.webkit.org/changeset/263389
>
Karl Rackler
Comment 13
2020-06-23 08:38:12 PDT
Created
https://bugs.webkit.org/show_bug.cgi?id=213517
for the test because it is flaky failing since introduction.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug